--- a/pip_requirements/requirements.txt
+++ b/pip_requirements/requirements.txt
@@ -5,13 +5,13 @@ decorator==4.4.0
 future==0.17.1
 gym==0.9.2
 idna==2.8
-ipython==6.1.0
-ipython-genutils==0.2.0
+ipython
+ipython-genutils
 jedi==0.15.1
 kiwisolver==1.1.0
 lief
 matplotlib==3.1.1
-numpy==1.17.0
+numpy
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
@@ -20,15 +20,15 @@ prompt-toolkit==1.0.16
 ptyprocess==0.6.0
 pyglet==1.4.2
 pyfiglet
-Pygments==2.4.2
+Pygments
 pyparsing==2.4.2
 python-dateutil==2.8.0
 requests==2.22.0
-scikit-learn==0.18.2
-scipy==0.19.1
+scikit-learn
+scipy
 simplegeneric==0.8.1
 six==1.12.0
-tensorflow==1.2.1
+tensorflow
 theano==0.9.0
 chainer==2.0.1
 chainerrl==0.2.0
@@ -37,7 +37,7 @@ traitlets==4.3.2
 urllib3==1.25.3
 wcwidth==0.1.7
 tqdm==4.30.0
-torch==1.0.0
+torch
 typing>=3.6.6
 tensorboardX==1.6
-rich==5.2.0
+rich
