--- a/pip_requirements/requirements.txt
+++ b/pip_requirements/requirements.txt
@@ -15,8 +15,8 @@ numpy
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
-Pillow==6.1.0
-prompt-toolkit==1.0.16
+Pillow
+prompt-toolkit
 ptyprocess==0.6.0
 pyglet==1.4.2
 pyfiglet
@@ -33,10 +33,10 @@ theano==0.9.0
 chainer==2.0.1
 chainerrl==0.2.0
 pefile
-traitlets==4.3.2
+traitlets
 urllib3==1.25.3
 wcwidth==0.1.7
-tqdm==4.30.0
+tqdm
 torch
 typing>=3.6.6
 tensorboardX
