--- a/pip_requirements/requirements.txt
+++ b/pip_requirements/requirements.txt
@@ -3,7 +3,7 @@ chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.0
 future==0.17.1
-gym==0.9.2
+gym=0.10.5
 idna==2.8
 ipython
 ipython-genutils
@@ -23,11 +23,11 @@ pyfiglet
 Pygments
 pyparsing==2.4.2
 python-dateutil==2.8.0
-requests==2.22.0
+requests
 scikit-learn
 scipy
 simplegeneric==0.8.1
-six==1.12.0
+six
 tensorflow
 theano==0.9.0
 chainer==2.0.1
