Hopefully fixed requirements to work with Google Colab (2)

--- a/pip_requirements/requirements.txt
+++ b/pip_requirements/requirements.txt
@@ -1,19 +1,19 @@
-certifi==2019.6.16
+certifi
 chardet==3.0.4
-cycler==0.10.0
-decorator==4.4.0
+cycler
+decorator
 future==0.17.1
 gym==0.10.5
 idna==2.8
 ipython
 ipython-genutils
 jedi==0.15.1
-kiwisolver==1.1.0
+kiwisolver
 lief
-matplotlib==3.1.1
+matplotlib
 numpy
 parso==0.5.1
-pexpect==4.7.0
+pexpect
 pickleshare==0.7.5
 Pillow
 prompt-toolkit
@@ -21,8 +21,8 @@ ptyprocess==0.6.0
 pyglet==1.4.2
 pyfiglet
 Pygments
-pyparsing==2.4.2
-python-dateutil==2.8.0
+pyparsing
+python-dateutil
 requests
 scikit-learn
 scipy
@@ -35,9 +35,9 @@ chainerrl==0.2.0
 pefile
 traitlets
 urllib3==1.25.3
-wcwidth==0.1.7
+wcwidth
 tqdm
 torch
-typing>=3.6.6
+typing
 tensorboardX
 rich
